--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^2.4.2",
     "react": "16.3.1",
     "react-native": "0.55.2",
+    "react-native-spinkit": "^1.1.1",
     "react-navigation": "^1.5.11"
   },
   "devDependencies": {
