--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-device-info": "^0.21.5",
     "react-native-orientation": "^3.1.3",
     "react-native-responsive-dimensions": "^1.0.2",
+    "react-native-sortable-listview": "^0.2.8",
     "react-native-spinkit": "^1.1.1",
     "react-navigation": "^1.5.11"
   },
