--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "native-base": "^2.4.2",
     "react": "16.3.1",
     "react-native": "0.55.2",
+    "react-native-communications": "^2.2.1",
+    "react-native-device-info": "^0.21.5",
     "react-native-htmlview": "^0.12.1",
     "react-native-orientation": "^3.1.3",
     "react-native-responsive-dimensions": "^1.0.2",
