--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-html-to-pdf')
     compile project(':react-native-device-info')
     compile project(':react-native-orientation')
     compile project(':react-native-spinkit')
