--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-html-to-pdf": "^0.6.0",
     "react-native-htmlview": "^0.12.1",
     "react-native-orientation": "^3.1.3",
+    "react-native-responsive": "^1.0.2",
     "react-native-responsive-dimensions": "^1.0.2",
     "react-native-sortable-listview": "^0.2.8",
     "react-native-spinkit": "^1.1.1",
