--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-device-info": "^0.21.5",
     "react-native-html-to-pdf": "^0.6.0",
     "react-native-htmlview": "^0.12.1",
+    "react-native-keyboard-manager": "^4.0.13-7",
     "react-native-orientation": "^3.1.3",
     "react-native-responsive": "^1.0.2",
     "react-native-responsive-dimensions": "^1.0.2",
