--- a/ios/palliative_care_app/Info.plist
+++ b/ios/palliative_care_app/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>13</string>
+	<string>15</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
@@ -43,10 +43,10 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Require locatoin service to use the app</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Require locatoin service to use the app</string>
+	<string>Require location service to use the app</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Require location service to use the app</string>
 	<key>NSMainNibFile</key>
 	<string>LaunchScreen</string>
 	<key>NSMainNibFile~ipad</key>
