--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-responsive": "^1.0.2",
     "react-native-responsive-dimensions": "^1.0.2",
     "react-native-sortable-listview": "^0.2.8",
+    "react-native-sound": "^0.10.9",
     "react-native-spinkit": "^1.1.1",
     "react-navigation": "^1.5.11"
   },
