--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-sound')
     compile project(':react-native-mail')
     compile project(':react-native-html-to-pdf')
     compile project(':react-native-device-info')
