Android build stuff

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,9 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+android.enableAapt2=false
+MYAPP_RELEASE_STORE_FILE=palliative-care.keystore
+MYAPP_RELEASE_KEY_ALIAS=palliative-care
+MYAPP_RELEASE_STORE_PASSWORD=libel-trait-earn-heft-bunk-sum-ernest-mutt-weigh-wacky
+MYAPP_RELEASE_KEY_PASSWORD=libel-trait-earn-heft-bunk-sum-ernest-mutt-weigh-wacky
+
