--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "npm run get_bundle && node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest",
+    "get_bundle": "sh ./scripts/create_local_store.sh"
   },
   "dependencies": {
     "moment": "^2.22.1",
