--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-keyboard-manager": "^4.0.13-7",
     "react-native-mail": "^3.0.6",
     "react-native-orientation": "^3.1.3",
+    "react-native-render-html": "^3.10.0",
     "react-native-responsive": "^1.0.2",
     "react-native-responsive-dimensions": "^1.0.2",
     "react-native-sortable-listview": "^0.2.8",
